--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "google-books-search": "^0.3.1",
     "jquery": "^3.3.1",
+    "marked": "^0.6.1",
     "popper.js": "^1.14.7",
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
